# docsync

./: .env.example  .gitignore  ACCESSIBILITY.md  AGENTS.md  CLAUDE.md  MISSING_LINKS_FIXES.md  README.md  REMOTE_SETUP.md  docsync.yaml.example  install.sh  pyproject.toml  setup.py
docs/: A11Y_DEVELOPER_GUIDE.md  A11Y_TESTING_CHECKLIST.md  README.md  architecture.md  backup-subsystem.md  cli-reference.md  cli.md  config-schema.md  index.md  modules.md  opencode.md  overview.md  setup.md  techstack.md
docsync/: __init__.py  cli.py  collector.py  config.py  generator.py  manifest.py  parser.py  search.py  sync.py  utils.py  web.py
docsync/backup/: __init__.py  engine.py  hooks.py  notify.py  report.py  restore.py  retention.py  snapshot.py  verify.py
docsync/static/: search.js  style.css
docsync/templates/: admin.html  backup_source.html  backups.html  base.html  config.html  doc.html  index.html  project.html  search.html
scripts/: README.md  add-remote-source.sh  batch-import-remotes.py  install-remote-client.sh  remote-health-check.py  remotes-example.csv  setup-remote-client.sh
scripts/systemd/: docsync-remote-sync.path  docsync-remote-sync.service  install-remote-watcher.sh
static/: search.js  style.css
templates/: index.html  updates.html
tests/: test_backup.py  test_collector.py  test_config.py  test_generator.py  test_manifest.py  test_parser.py
tests/e2e/: conftest.py  test_admin.py  test_backups.py  test_content.py  test_docs.py  test_keyboard.py  test_navigation.py  test_responsive.py  test_search.py  test_site_structure.py  test_theme.py
